# my-mentat

./: .gitignore  AGENTS.md  LICENSE  QA-SESSION-SUMMARY.md  package-lock.json  qa-regression-report-2026-06-29.md  qa-test-report.md
.cursor/: base  immortality  rise_of_ix
.cursor/plans/: implement_bypass_protocol_acquire_effect_5ff583bd.plan.md  influence_victory_points_f60507de.plan.md
.cursor/rules/: board-spaces.mdc  clarifications.mdc  full-rules.mdc  my-mentat.mdc  round-structure.mdc  terms.mdc
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/public/: ariana.avif  leto.avif  paul.avif
client/scripts/: add-save-fixture.mjs  fix-card-corner-transparency.py  generate-base-game-manifest.py  generate-catalogs.ts  removeIconBackgrounds.py  seed-save-fixture.mts
client/src/: App.css  App.tsx  index.css  main.tsx  theme-arrakis-sun.css  theme-play-chrome.css
notes/: 2025-08-17  cursor_implement_card_selection_pop_up.md  game-save-and-publish-feature-plan.md  time-travel-system-analysis.md  todo-imperium-row
plans/: interactive-board.md
plans/immortality/: 00-overview.md  00b-expansion-module-architecture.md  README.md
plans/reducer/: 00-overview.md  (+7 more)
qa-screenshots/: BUGS_FOUND.md  COMPREHENSIVE_QA_REPORT.md  FINAL_SUMMARY.md  MOBILE_QA_REPORT.md  QA_TEST_REPORT.md  REGRESSION_QA_SUMMARY.md
scripts/: extract-conflicts-assets.py
server/: .env.example  Cargo.toml  README.md
server/migrations/: 001_init.sql  002_fix_games_timestamps.sql
server/src/: dao.rs  main.rs
(+530 files in other folders)
