[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
argon2 = "0.5.3"
rand = "0.10.1"
axum-login = "0.18.0"
axum-extra = "0.12.6"
tower-sessions = "0.15.0"
anyhow = "1.0.103"
axum-anyhow = "0.11.4"
sqlx-core = { version="0.8.6", features = ["chrono"] }
sqlx-sqlite = { version="0.8.6", features = ["chrono"] }
serde = "1.0.228"
dotenvy = "0.15"
chrono = { version = "0.4.45", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1.0.150"

